<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetpassword.ForgetPasswordActivity">

    <TextView
        android:id="@+id/topText"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/signInColor"
        android:text="Nook Life"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/montserrat_regular"
        android:textStyle="bold"
        android:elevation="@dimen/_4sdp">

    </TextView>

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:tint="@color/black"
        android:src="@drawable/ic_round_arrow_back_ios_24">
    </ImageView>
    <TextView
        android:id="@+id/forgetPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageBack"
        android:textSize="@dimen/_16ssp"
        android:text="@string/reset_your_password"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black">
    </TextView>

    <TextView
        android:id="@+id/SubForgetPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgetPasswordText"
        android:textSize="@dimen/_8ssp"
        android:text="@string/enter_your_registered_login_email_address_to_recieve_a_secure_link_to_set_a_new_password"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/Gray_DarkGray">
    </TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/SubForgetPasswordText">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:textSize="@dimen/_14ssp"
            android:hint="Email address"

            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logIn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:text="@string/sendlink"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:backgroundTint="@color/signInColor"
        android:elevation="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent">

    </Button>


    <TextView
        android:id="@+id/dontHaveText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logIn"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/dontreset"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:textColor="@color/Gray_DarkGray">
    </TextView>

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveText"
        android:textSize="@dimen/_10ssp"
        android:text="@string/gotoLogin"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:textColor="@color/blue">
    </TextView>

    <TextView
        android:id="@+id/bottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_8ssp"
        android:text="@string/allrightreserve"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/Gray_DarkGray">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>


</layout>