<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.RegisterActivity">


      <TextView
          android:id="@+id/topText"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:layout_constraintTop_toTopOf="parent"
          android:background="@color/signInColor"
          android:text="Nook Life"
          android:textColor="@color/black"
          android:gravity="center"
          android:textSize="@dimen/_16ssp"
          android:fontFamily="@font/montserrat_regular"
          android:textStyle="bold"
          android:elevation="@dimen/_4sdp" />

      <ImageView
          android:id="@+id/imageBack"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/topText"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginTop="@dimen/_15sdp"
          android:layout_marginHorizontal="@dimen/_10sdp"
          app:tint="@color/black"
          android:src="@drawable/ic_round_arrow_back_ios_24" />

      <TextView
          android:id="@+id/createAccountText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/imageBack"
          android:textSize="@dimen/_16ssp"
          android:text="Create your free account now"
          android:layout_marginStart="@dimen/_10sdp"
          android:layout_marginTop="@dimen/_10sdp"
          android:fontFamily="@font/montserrat_semibold"
          android:textColor="@color/black" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            app:errorEnabled="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/createAccountText">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:textSize="@dimen/_14ssp"
                android:hint="First Name"

                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            app:errorEnabled="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/editFirstName">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:textSize="@dimen/_14ssp"
                android:hint="Last Name"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="start"
            android:background="@drawable/phone_bg"
            android:layoutDirection="ltr"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="US"
            app:ccp_arrowColor="@color/black"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLastName" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/phone_bg"
            android:hint="@string/phone"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:inputType="phone"
            android:imeOptions="actionDone"
            app:layout_constraintLeft_toRightOf="@+id/ccp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/editLastName"
            tools:ignore="Autofill,RtlHardcoded" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            app:errorEnabled="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/etPhone">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:textSize="@dimen/_14ssp"
                android:hint="Email"

                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            app:errorEnabled="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/editEmail">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:textSize="@dimen/_14ssp"
                android:hint="Password"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


      <View
          android:id="@+id/separator"
          android:background="@color/Gray_LightGray"
          app:layout_constraintBottom_toTopOf="@+id/tvPolicy"
          android:layout_marginBottom="@dimen/_5sdp"
          android:layout_width="match_parent"
          android:layout_height="1dp" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/tvPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/checkbox_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/montserrat_medium"
            android:buttonTint="@color/blue"
            android:paddingLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/signUp"
            android:layout_marginBottom="@dimen/_5sdp"
            tools:ignore="UnusedAttribute" />

      <Button
          android:id="@+id/signUp"
          android:layout_width="0dp"
          android:layout_height="@dimen/_42sdp"
          android:text="@string/signUp"
          android:textColor="@color/white"
          android:fontFamily="@font/montserrat_bold"
          android:layout_marginHorizontal="@dimen/_10sdp"
          android:backgroundTint="@color/black"
          android:elevation="@dimen/_20sdp"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginVertical="@dimen/_6sdp"
          app:layout_constraintBottom_toTopOf="@+id/alreadyText"
          app:layout_constraintEnd_toEndOf="parent" />

      <TextView
          android:id="@+id/alreadyText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:textSize="@dimen/_8ssp"
          android:text="@string/alreadyText"
          android:layout_marginStart="@dimen/_10sdp"
          android:layout_marginTop="@dimen/_10sdp"
          app:layout_constraintBottom_toTopOf="@+id/signInNow"
          android:gravity="center"
          android:fontFamily="@font/montserrat_regular"
          android:textColor="@color/Gray_DarkGray" />

      <TextView
          android:id="@+id/signInNow"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_10ssp"
          android:text="@string/singIn"
          android:layout_marginStart="@dimen/_10sdp"
          android:layout_marginTop="@dimen/_10sdp"
          app:layout_constraintBottom_toTopOf="@+id/bottomText"
          android:layout_marginBottom="@dimen/_15sdp"
          android:gravity="center"
          android:fontFamily="@font/montserrat_semibold"
          android:textColor="@color/blue" />

      <TextView
          android:id="@+id/bottomText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_8ssp"
          android:text="@string/allrightreserve"
          android:layout_marginStart="@dimen/_10sdp"
          android:layout_marginTop="@dimen/_8sdp"
          app:layout_constraintBottom_toBottomOf="parent"
          android:gravity="center"
          android:fontFamily="@font/montserrat_regular"
          android:textColor="@color/Gray_DarkGray" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>